added netlify form

--- a/contact.html
+++ b/contact.html
@@ -1472,6 +1472,9 @@
                               novalidate=""
                               id="CntctFrm2form-wrapper"
                               class="cf1form-wrapper"
+                              name="contact" 
+                              method="POST"
+                              data-netlify="true"
                             >
                               <div id="CntctFrm2wrapper" class="cf1wrapper">
                                 <div>
