--- a/index.html
+++ b/index.html
@@ -1824,13 +1824,13 @@
                                 style="font-size:17px; line-height:1.3em;"
                               >
                                 <a
-                                  href="mailto:jflanner@msn.com?subject=Hi, I'd like to know more about ATM new England"
+                                  href="mailto:atmnewengland1@gmail.com?subject=Hi, I'd like to know more about ATM new England"
                                   target="_self"
-                                  data-content="jflanner@msn.com"
+                                  data-content="atmnewengland1@gmail.com"
                                   data-type="mail"
                                   ><span class="color_11"
                                     ><span style="text-decoration:underline;"
-                                      >jFlanner@msn.com</span
+                                      >AtmNewEngland1@gmail.com</span
                                     ></span
                                   ></a
                                 >
