--- a/contact.html
+++ b/contact.html
@@ -1455,7 +1455,7 @@
                             <h6 style="line-height:0.7em;" class="font_6">
                               <span class="color_2"
                                 ><span style="line-height:0.7em;"
-                                  >1800 324 1699</span
+                                  ><b>1800 324 1699</b></span
                                 ></span
                               >
                             </h6>
@@ -1488,6 +1488,7 @@
                                     class="cf1_required"
                                     placeholder="Name *"
                                     data-aid="nameField"
+                                    style="border: 1px solid black;"
                                   /><input
                                     type="text"
                                     id="field2"
@@ -1498,6 +1499,7 @@
                                     class="cf1_required"
                                     placeholder="Email *"
                                     data-aid="emailField"
+                                    style="border: 1px solid black;"
                                   /><input
                                     type="text"
                                     id="field3"
@@ -1507,6 +1509,7 @@
                                     class=""
                                     placeholder="Subject"
                                     data-aid="subjectField"
+                                    style="border: 1px solid black;"
                                   />
                                 </div>
                                 <textarea
@@ -1515,12 +1518,14 @@
                                   placeholder="Message"
                                   data-aid="messageField"
                                   id="CntctFrm2fieldMessage"
+                                  style="border: 1px solid black;"
                                 ></textarea>
                                 <div class="cf1_form-footer">
                                   <button
                                     type="submit"
                                     id="CntctFrm2submit"
                                     class="cf1submit"
+                                    style="width: 75px;"
                                   >
                                     Send</button
                                   ><span
